@@ -14,9 +14,11 @@ import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNote;
 import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteService;
 import org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteStatus;
 import org.synyx.urlaubsverwaltung.workingtime.WorkingTimeCalendar;
+import org.synyx.urlaubsverwaltung.workingtime.WorkingTimeCalendar.WorkingDayInformation;
 import org.synyx.urlaubsverwaltung.workingtime.WorkingTimeCalendarService;
 
 import java.time.LocalDate;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
@@ -25,15 +27,8 @@ import java.util.stream.Stream;
 import static java.lang.invoke.MethodHandles.lookup;
 import static java.util.stream.Collectors.toList;
 import static org.slf4j.LoggerFactory.getLogger;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.ALLOWED_CANCELLATION_REQUESTED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.CANCELLED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.REJECTED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.REVOKED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.TEMPORARY_ALLOWED;
-import static org.synyx.urlaubsverwaltung.application.application.ApplicationStatus.WAITING;
-import static org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteStatus.ACTIVE;
-import static org.synyx.urlaubsverwaltung.sicknote.sicknote.SickNoteStatus.CONVERTED_TO_VACATION;
+import static org.synyx.urlaubsverwaltung.workingtime.WorkingTimeCalendar.WorkingDayInformation.WorkingTimeCalendarEntryType.NO_WORKDAY;
+import static org.synyx.urlaubsverwaltung.workingtime.WorkingTimeCalendar.WorkingDayInformation.WorkingTimeCalendarEntryType.PUBLIC_HOLIDAY;
 
 
 @Service
@@ -41,9 +36,6 @@ public class AbsenceServiceImpl implements AbsenceService {
 
     private static final Logger LOG = getLogger(lookup().lookupClass());
 
-
-    private static final List<ApplicationStatus> APPLICATION_STATUSES = List.of(ALLOWED, WAITING, TEMPORARY_ALLOWED, ALLOWED_CANCELLATION_REQUESTED);
-    private static final List<SickNoteStatus> SICK_NOTE_STATUSES = List.of(ACTIVE);
 
     private final ApplicationService applicationService;
     private final SickNoteService sickNoteService;
@@ -67,18 +59,7 @@ public class AbsenceServiceImpl implements AbsenceService {
 
     @Override
     public List<AbsencePeriod> getOpenAbsences(List<Person> persons, LocalDate start, LocalDate end) {
-
-        final DateRange askedDateRange = new DateRange(start, end);
-
-        final Map<Person, WorkingTimeCalendar> workingTimeCalendarByPerson = workingTimeCalendarService.getWorkingTimesByPersons(persons, askedDateRange);
-
-        final List<Application> openApplications = applicationService.getForStatesAndPerson(APPLICATION_STATUSES, persons, start, end);
-        final List<AbsencePeriod> applicationAbsences = generateAbsencePeriodFromApplication(openApplications, askedDateRange, workingTimeCalendarByPerson::get);
-
-        final List<SickNote> openSickNotes = sickNoteService.getForStatesAndPerson(SICK_NOTE_STATUSES, persons, start, end);
-        final List<AbsencePeriod> sickNoteAbsences = generateAbsencePeriodFromSickNotes(openSickNotes, askedDateRange, workingTimeCalendarByPerson::get);
-
-        return Stream.concat(applicationAbsences.stream(), sickNoteAbsences.stream()).collect(toList());
+        return getAbsences(persons, start, end, ApplicationStatus.activeStatuses(), SickNoteStatus.activeStatuses());
     }
 
     @Override
@@ -88,28 +69,34 @@ public class AbsenceServiceImpl implements AbsenceService {
 
     @Override
     public List<AbsencePeriod> getClosedAbsences(List<Person> persons, LocalDate start, LocalDate end) {
+        return getAbsences(persons, start, end, ApplicationStatus.inactiveStatuses(), SickNoteStatus.inactiveStatuses());
+    }
+
+    private List<AbsencePeriod> getAbsences(List<Person> persons, LocalDate start, LocalDate end, List<ApplicationStatus> byApplicationStatus, List<SickNoteStatus> bySickNoteStatus) {
 
         final DateRange askedDateRange = new DateRange(start, end);
 
         final Map<Person, WorkingTimeCalendar> workingTimeCalendarByPerson = workingTimeCalendarService.getWorkingTimesByPersons(persons, askedDateRange);
 
-        List<ApplicationStatus> closedAppStatus = List.of(REJECTED, CANCELLED, REVOKED);
-        final List<Application> closedApplications = applicationService.getForStatesAndPerson(closedAppStatus, persons, start, end);
-        final List<AbsencePeriod> applicationAbsences = generateAbsencePeriodFromApplication(closedApplications, askedDateRange, workingTimeCalendarByPerson::get);
+        final List<Application> openApplications = applicationService.getForStatesAndPerson(byApplicationStatus, persons, start, end);
+        final List<AbsencePeriod> applicationAbsences = generateAbsencePeriodFromApplication(openApplications, askedDateRange, workingTimeCalendarByPerson::get);
 
-        List<SickNoteStatus> closedSickNoteStatus = List.of(CONVERTED_TO_VACATION, SickNoteStatus.CANCELLED);
-        final List<SickNote> closedSickNotes = sickNoteService.getForStatesAndPerson(closedSickNoteStatus, persons, start, end);
-        final List<AbsencePeriod> sickNoteAbsences = generateAbsencePeriodFromSickNotes(closedSickNotes, askedDateRange, workingTimeCalendarByPerson::get);
+        final List<SickNote> openSickNotes = sickNoteService.getForStatesAndPerson(bySickNoteStatus, persons, start, end);
+        final List<AbsencePeriod> sickNoteAbsences = generateAbsencePeriodFromSickNotes(openSickNotes, askedDateRange, workingTimeCalendarByPerson::get);
 
-        return Stream.concat(applicationAbsences.stream(), sickNoteAbsences.stream()).collect(toList());
+        final List<AbsencePeriod> noWorkingDaysAndPublicHolidays = generateAbsencePeriodFromWorkingTimes(workingTimeCalendarByPerson);
+
+        return Stream.of(applicationAbsences.stream(), sickNoteAbsences.stream(), noWorkingDaysAndPublicHolidays.stream())
+            .reduce(Stream.of(), Stream::concat)
+            .toList();
     }
 
     @Override
     public List<Absence> getOpenAbsencesSince(List<Person> persons, LocalDate since) {
-        final List<Application> openApplications = applicationService.getForStatesAndPersonSince(APPLICATION_STATUSES, persons, since);
+        final List<Application> openApplications = applicationService.getForStatesAndPersonSince(ApplicationStatus.activeStatuses(), persons, since);
         final List<Absence> applicationAbsences = generateAbsencesFromApplication(openApplications);
 
-        final List<SickNote> openSickNotes = sickNoteService.getForStatesAndPersonSince(SICK_NOTE_STATUSES, persons, since);
+        final List<SickNote> openSickNotes = sickNoteService.getForStatesAndPersonSince(SickNoteStatus.activeStatuses(), persons, since);
         final List<Absence> sickNoteAbsences = generateAbsencesFromSickNotes(openSickNotes);
 
         return ListUtils.union(applicationAbsences, sickNoteAbsences);
@@ -117,10 +104,10 @@ public class AbsenceServiceImpl implements AbsenceService {
 
     @Override
     public List<Absence> getOpenAbsencesSince(LocalDate since) {
-        final List<Application> openApplications = applicationService.getForStatesSince(APPLICATION_STATUSES, since);
+        final List<Application> openApplications = applicationService.getForStatesSince(ApplicationStatus.activeStatuses(), since);
         final List<Absence> applicationAbsences = generateAbsencesFromApplication(openApplications);
 
-        final List<SickNote> openSickNotes = sickNoteService.getForStatesSince(SICK_NOTE_STATUSES, since);
+        final List<SickNote> openSickNotes = sickNoteService.getForStatesSince(SickNoteStatus.activeStatuses(), since);
         final List<Absence> sickNoteAbsences = generateAbsencesFromSickNotes(openSickNotes);
 
         return ListUtils.union(applicationAbsences, sickNoteAbsences);
@@ -133,14 +120,6 @@ public class AbsenceServiceImpl implements AbsenceService {
             .collect(toList());
     }
 
-    private List<AbsencePeriod> generateAbsencePeriodFromApplication(List<Application> applications,
-                                                                     DateRange askedDateRange,
-                                                                     Function<Person, WorkingTimeCalendar> workingTimeCalendarSupplier) {
-        return applications.stream()
-            .map(application -> toAbsencePeriod(application, askedDateRange, workingTimeCalendarSupplier))
-            .collect(toList());
-    }
-
     private List<Absence> generateAbsencesFromSickNotes(List<SickNote> sickNotes) {
         final AbsenceTimeConfiguration config = getAbsenceTimeConfiguration();
         return sickNotes.stream()
@@ -148,12 +127,59 @@ public class AbsenceServiceImpl implements AbsenceService {
             .collect(toList());
     }
 
-    private List<AbsencePeriod> generateAbsencePeriodFromSickNotes(List<SickNote> sickNotes,
-                                                                   DateRange askedDateRange,
-                                                                   Function<Person, WorkingTimeCalendar> workingTimeCalendarSupplier) {
+    private List<AbsencePeriod> generateAbsencePeriodFromApplication(List<Application> applications, DateRange askedDateRange, Function<Person, WorkingTimeCalendar> workingTimeCalendarSupplier) {
+        return applications.stream()
+            .map(application -> toAbsencePeriod(application, askedDateRange, workingTimeCalendarSupplier))
+            .toList();
+    }
+
+    private List<AbsencePeriod> generateAbsencePeriodFromSickNotes(List<SickNote> sickNotes, DateRange askedDateRange, Function<Person, WorkingTimeCalendar> workingTimeCalendarSupplier) {
         return sickNotes.stream()
             .map(sickNote -> toAbsencePeriod(sickNote, askedDateRange, workingTimeCalendarSupplier))
-            .collect(toList());
+            .toList();
+    }
+
+    private List<AbsencePeriod> generateAbsencePeriodFromWorkingTimes(Map<Person, WorkingTimeCalendar> workingTimeCalendars) {
+        return workingTimeCalendars.entrySet().stream()
+            .map(this::toAbsencePeriod)
+            .flatMap(Collection::stream)
+            .toList();
+    }
+
+    private List<AbsencePeriod> toAbsencePeriod(Map.Entry<Person, WorkingTimeCalendar> workingTimeCalendarEntry) {
+
+        final Person person = workingTimeCalendarEntry.getKey();
+        final WorkingTimeCalendar workingTimeCalendar = workingTimeCalendarEntry.getValue();
+
+        return workingTimeCalendar.getWorkingDays().entrySet().stream()
+            .<AbsencePeriod>mapMulti((workingDayInformationEntry, consumer) -> {
+                final LocalDate date = workingDayInformationEntry.getKey();
+                final WorkingDayInformation workingDayInformation = workingDayInformationEntry.getValue();
+
+                if (!workingDayInformation.dayLength().isFull()) {
+                    if (workingDayInformation.morning() == workingDayInformation.noon()) {
+                        if (workingDayInformation.morning() == NO_WORKDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordMorningNoWorkday(person), new AbsencePeriod.RecordNoonNoWorkday(person)))));
+                        } else if (workingDayInformation.morning() == PUBLIC_HOLIDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordMorningPublicHoliday(person), new AbsencePeriod.RecordNoonPublicHoliday(person)))));
+                        }
+                    } else {
+                        if (workingDayInformation.morning() == NO_WORKDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordMorningNoWorkday(person)))));
+                        } else if (workingDayInformation.morning() == PUBLIC_HOLIDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordMorningPublicHoliday(person)))));
+                        }
+
+                        if (workingDayInformation.noon() == NO_WORKDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordNoonNoWorkday(person)))));
+                        } else if (workingDayInformation.noon() == PUBLIC_HOLIDAY) {
+                            consumer.accept(new AbsencePeriod(List.of(new AbsencePeriod.Record(date, person, new AbsencePeriod.RecordNoonPublicHoliday(person)))));
+                        }
+                    }
+                }
+
+            })
+            .toList();
     }
 
     private AbsencePeriod toAbsencePeriod(Application application, DateRange askedDateRange, Function<Person, WorkingTimeCalendar> workingTimeCalendarSupplier) {
@@ -169,7 +195,6 @@ public class AbsenceServiceImpl implements AbsenceService {
             case REVOKED -> AbsencePeriod.AbsenceStatus.REVOKED;
             case REJECTED -> AbsencePeriod.AbsenceStatus.REJECTED;
             case CANCELLED -> AbsencePeriod.AbsenceStatus.CANCELLED;
-            default -> throw new IllegalStateException("application status not expected here.");
         };
     }
 
@@ -185,7 +210,7 @@ public class AbsenceServiceImpl implements AbsenceService {
             .map(date -> Map.entry(date, workingTimeCalendar.workingTimeDayLength(date).orElse(DayLength.ZERO)))
             .filter(entry -> !entry.getValue().equals(DayLength.ZERO))
             .map(entry -> toVacationAbsencePeriodRecord(entry.getKey(), entry.getValue(), application))
-            .collect(toList());
+            .toList();
     }
 
     private AbsencePeriod.Record toVacationAbsencePeriodRecord(LocalDate date, DayLength workingDayLength, Application application) {
@@ -193,7 +218,8 @@ public class AbsenceServiceImpl implements AbsenceService {
         final Person person = application.getPerson();
         final Long applicationId = application.getId();
         final AbsencePeriod.AbsenceStatus status = toAbsenceStatus(application.getStatus());
-        final Long vacationTypeId = application.getVacationType().getId();
+        final String typeCategory = application.getVacationType().getCategory().name();
+        final Long typeId = application.getVacationType().getId();
         final boolean visibleToEveryone = application.getVacationType().isVisibleToEveryone();
         final DayLength applicationDayLength = application.getDayLength();
 
@@ -203,7 +229,7 @@ public class AbsenceServiceImpl implements AbsenceService {
         if (workingDayLength.isMorning()) {
             noon = null;
             if (applicationDayLength.isFull() || applicationDayLength.isMorning()) {
-                morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
+                morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
             } else {
                 LOG.info("calculate absence seems fishy. workingDayLength={} application.dayLength={} application.id={}", workingDayLength, applicationDayLength, applicationId);
                 morning = null;
@@ -211,20 +237,20 @@ public class AbsenceServiceImpl implements AbsenceService {
         } else if (workingDayLength.isNoon()) {
             morning = null;
             if (applicationDayLength.isFull() || applicationDayLength.isNoon()) {
-                noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
+                noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
             } else {
                 LOG.info("calculate absence seems fishy. workingDayLength={} application.dayLength={} application.id={} ", workingDayLength, applicationDayLength, applicationId);
                 noon = null;
             }
         } else if (applicationDayLength.isMorning()) {
-            morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
+            morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
             noon = null;
         } else if (applicationDayLength.isNoon()) {
             morning = null;
-            noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
+            noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
         } else {
-            morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
-            noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, vacationTypeId, visibleToEveryone);
+            morning = new AbsencePeriod.RecordMorningVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
+            noon = new AbsencePeriod.RecordNoonVacation(person, applicationId, status, typeCategory, typeId, visibleToEveryone);
         }
 
         return new AbsencePeriod.Record(date, person, morning, noon);
@@ -254,7 +280,7 @@ public class AbsenceServiceImpl implements AbsenceService {
             .map(date -> Map.entry(date, workingTimeCalendar.workingTimeDayLength(date).orElse(DayLength.ZERO)))
             // sickNotes are
             .map(entry -> toSickAbsencePeriodRecord(entry.getKey(), entry.getValue(), sickNote))
-            .collect(toList());
+            .toList();
     }
 
     private AbsencePeriod.Record toSickAbsencePeriodRecord(LocalDate date, DayLength workingTimeDayLength, SickNote sickNote) {
@@ -262,30 +288,32 @@ public class AbsenceServiceImpl implements AbsenceService {
         final Long sickNoteId = sickNote.getId();
         final Person person = sickNote.getPerson();
         final AbsencePeriod.AbsenceStatus status = toAbsenceStatus(sickNote.getStatus());
+        final String typeCategory = sickNote.getSickNoteType().getCategory().name();
+        final Long typeId = sickNote.getSickNoteType().getId();
 
         final AbsencePeriod.RecordMorningSick morning;
         final AbsencePeriod.RecordNoonSick noon;
 
         if (workingTimeDayLength.isHalfDay()) {
             if (workingTimeDayLength.isMorning()) {
-                morning = null;
-                noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status);
-            } else {
-                morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status);
+                morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status, typeCategory, typeId);
                 noon = null;
+            } else {
+                morning = null;
+                noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status, typeCategory, typeId);
             }
             return new AbsencePeriod.Record(date, person, morning, noon);
         }
 
         if (DayLength.MORNING.equals(sickNote.getDayLength())) {
-            morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status);
+            morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status, typeCategory, typeId);
             noon = null;
         } else if (DayLength.NOON.equals(sickNote.getDayLength())) {
             morning = null;
-            noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status);
+            noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status, typeCategory, typeId);
         } else {
-            morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status);
-            noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status);
+            morning = new AbsencePeriod.RecordMorningSick(person, sickNoteId, status, typeCategory, typeId);
+            noon = new AbsencePeriod.RecordNoonSick(person, sickNoteId, status, typeCategory, typeId);
         }
 
         return new AbsencePeriod.Record(date, person, morning, noon);
